[package]
name = "uows-crypto"
version = "0.1.4"
authors = ["Saadi Save <https://github.com/SaadiSave"]
edition = "2018"
description = "Crypto lib for UOWS"
license = "AGPL-3.0"
repository = "https://github.com/uows-master/uows-crypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.8"